--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -13,7 +13,7 @@
 
   <div style="clear:both;"></div>
   <div class="poweredby">
-      <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Made with <3</span></a>
+      <!-- <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Made with <3</span></a> -->
   </div>
   </body>
 </html>
