--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
 
   <!-- Icons -->
   <link rel="apple-touch-icon" href="{{ site.logo }}"/>
-  <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="{{ site.url }}/favicon.ico" />
+  <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="{{ site.baseurl }}/favicon.ico" />
 
   <!-- Styles -->
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/normalize.css">
