Added now page and impossible list page

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,6 +6,8 @@
     <a href="/">home/</a>
     <a href="/blog">blog/</a>
     <a href="/resume">resume/</a>
+    <a href="/now">now/</a>
+    <a href="/impossible">impossible/</a>
     <a href="/terminal.html">terminal/</a>
   </div>
 
