--- a/assets/main.scss
+++ b/assets/main.scss
@@ -36,7 +36,7 @@ div.site-content {
     padding-right: 10px;
 }
 
-@font-face{font-family:Vollkorn;font-style:normal;src:url(/assets/fonts/Vollkorn-Regular.otf)}
+@font-face{font-family:Vollkorn;font-style:normal;src:url(/assets/fonts/Vollkorn-Regular.otf);font-display:fallback;}
 
 body {
 	font-family: 'Vollkorn', serif;
