--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,14 +6,14 @@
 
   <!-- Icons -->
   <link rel="apple-touch-icon" href="{{ site.logo }}"/>
-  <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="{{ site.baseurl }}/favicon.ico" />
+  <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="/favicon.ico" />
 
   <!-- Styles -->
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/normalize.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/main.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/solarized.css">
+  <link rel="stylesheet" href="/assets/normalize.css">
+  <link rel="stylesheet" href="/assets/main.css">
+  <link rel="stylesheet" href="/assets/solarized.css">
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="canonical" href="{{ site.url }}{{ page.url }}">
+  <link rel="canonical" href="{{ page.url }}">
 
   <!-- Meta information -->
   <meta name="author" content="{{ site.author }}">
