--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,10 +9,12 @@
   <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="/favicon.ico" />
 
   <!-- Styles -->
-  <link rel="stylesheet" href="/assets/normalize.css">
-  <link rel="stylesheet" href="/assets/main.css">
-  <link rel="stylesheet" href="/assets/solarized.css">
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+  {% capture critcss %}{% include critical.scss %}{% endcapture %}
+  <style type="text/css">{{ critcss | scssify }}</style>
+  <link rel="preload" href="/assets/solarized.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="/assets/solarized.css"></noscript>
+  <link rel="preload" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"></noscript>
   <link rel="canonical" href="{{ page.url }}">
 
   <!-- Meta information -->
