December 2019 Update -Added knowledge base -Fixed syntax highlighting not happening in lists -Adjusted <h2> padding -Removed Beeminder tracker

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,7 +8,7 @@
     <a href="/resume">resume/</a>
     <a href="/now">now/</a>
     <a href="/impossible">impossible/</a>
-    <a href="/terminal.html">terminal/</a>
+    <a href="/kb">kb/</a>
   </div>
 
   {{ content }}
