--- a/_includes/critical.scss
+++ b/_includes/critical.scss
@@ -72,6 +72,16 @@ a:hover {
 	text-decoration: underline;
 }
 
+h2 {
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
+}
+
+ul {
+    margin-block-start: 0.0em;
+    margin-block-end: 0.0em;
+}
+
 
 /*** main content list ***/
 .main-list-item {
