--- a/_includes/critical.scss
+++ b/_includes/critical.scss
@@ -76,8 +76,13 @@ h2, h3 {
     margin-block-end: 0.5em;
 }
 
-ul {
-    margin-block-start: 0.0em;
+h4 {
+    margin-block-start: 1.5em;
+    margin-block-end: -0.8em;
+}
+
+ul, ol {
+    margin-block-start: -0.6em;
     margin-block-end: 0.0em;
 }
 
