--- a/_includes/critical.scss
+++ b/_includes/critical.scss
@@ -71,6 +71,10 @@ a:hover {
 	text-decoration: underline;
 }
 
+.shadow-img {
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 h2, h3 {
     margin-block-start: 0.5em;
     margin-block-end: 0.5em;
