--- a/_includes/critical.scss
+++ b/_includes/critical.scss
@@ -34,50 +34,13 @@ div.site-content {
     padding-right: 10px;
 }
 
-@font-face {
-    font-family: Vollkorn;
-    font-style: normal;
-    src: url(/assets/fonts/Vollkorn-Regular.otf);
-    font-display: fallback;
-}
-
 body {
-    font-family: 'Vollkorn', serif;
-    font-feature-settings: 'lnum';
+    font-family: "-apple-system", BlinkMacSystemFont, avenir next, avenir, helvetica, helvetica neue, ubuntu, roboto, noto, segoe ui, arial, sans-serif;
+    font-size: 1rem;
+    line-height: 1.5;
     color: $text-color;
     background-color: $background-color;
-    font-size: 17.8px; //OTF font is having rendering issues at 18px
 }
-
-p,
-li {
-    font-size: 1.3em;
-    font-size: 17.8px;
-}
-
-ul,
-ol {
-    margin-block-start: 0em;
-    margin-block-end: 0em;
-}
-
-p {
-    margin-block-start: 0.25em;
-    margin-block-end: 0.25em;
-}
-
-header,
-main {
-    padding: 0 20px;
-}
-
-
-/*** wrapper div for both header and main ***/
-
-.wrapper {
-    margin-top: 10%;
-}
-
 
 /*** anchor tags ***/
 
@@ -92,47 +55,6 @@ a:active {
 a:hover {
     text-decoration: underline;
 }
-
-.shadow-img {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-h2,
-h3 {
-    margin-block-start: 0.50em;
-    margin-block-end: 0.25em;
-}
-
-h4 {
-    margin-block-start: 1.5em;
-    margin-block-end: -0.8em;
-}
-
-
-/*** main content list ***/
-
-.main-list-item {
-    font-weight: bold;
-    font-size: 1.2em;
-    margin: 0.8em 0;
-}
-
-
-/* override the left margin added by font awesome for the main content list,
-since it must be aligned with the content */
-
-.fa-ul.main-list {
-    margin-left: 0;
-}
-
-
-/* list icons */
-
-.main-list-item-icon {
-    width: 36px;
-    color: $text-color;
-}
-
 
 /*** logo ***/
 
@@ -151,37 +73,15 @@ since it must be aligned with the content */
     box-shadow: 0 0 0 3px $text-color;
 }
 
-
 /*** author ***/
 
 .author-container h1 {
     font-size: 2.8em;
+    line-height: 1em;
     margin-top: 0;
     margin-bottom: 0;
     text-align: center;
 }
-
-
-/*** tagline ***/
-
-.tagline-container p {
-    font-size: 1.3em;
-    text-align: center;
-    margin-bottom: 2em;
-}
-
-
-/******/
-
-hr {
-    border: 0;
-    height: 1px;
-    background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), $text-color, rgba(0, 0, 0, 0));
-    background-image: -moz-linear-gradient(left, rgba(0, 0, 0, 0), $text-color, rgba(0, 0, 0, 0));
-    background-image: -ms-linear-gradient(left, rgba(0, 0, 0, 0), $text-color, rgba(0, 0, 0, 0));
-    background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0), $text-color, rgba(0, 0, 0, 0));
-}
-
 
 /*** footer ***/
 
@@ -191,16 +91,6 @@ footer {
     right: 0;
     height: 20px;
 }
-
-.poweredby {
-    font-family: "Arial Narrow", Arial;
-    font-size: 0.6em;
-    line-height: 0.6em;
-    padding: 0 5px;
-    margin-top: 30px;
-    text-align: center;
-}
-
 
 /*** media queries ***/
 
@@ -225,27 +115,10 @@ footer {
     /* past 768px the layout is changed and the wrapper has a fixed width of 680px
 	to accomodate both the header column and the content column */
     .wrapper {
-        width: 680px;
+        width: 480px;
     }
     div.site-content {
         width: 680px;
-    }
-    /* the header column stays left and has a dynamic width with all contents
-	aligned right */
-    header {
-        float: left;
-        width: 30%;
-        text-align: right;
-    }
-    .author-container h1,
-    .logo-container,
-    .tagline-container p {
-        text-align: right;
-    }
-    main {
-        width: 62%;
-        margin-left: 43%;
-        padding: 0;
     }
 }
 
@@ -258,21 +131,6 @@ footer {
         padding-top: 3px;
     }
 }
-
-.social {
-    text-align: center;
-}
-
-.social li {
-    display: inline-block;
-    font-size: 1px;
-    padding-left: 20px;
-}
-
-#reddit-share {
-    padding-left: 0px;
-}
-
 
 /* BLOCKQUOTE STYLES */
 
